@@ -26,6 +26,7 @@ Process Hacker
    * Crash when viewing error details in the event 
      of a corrupt configuration file
    * Notification icons were fixed at 16x16 size
+   * Sort order for the relative start time column
 
 1.5
  * NEW/IMPROVED:
